--- a/ui-backend/templates/index.html
+++ b/ui-backend/templates/index.html
@@ -225,7 +225,7 @@
             <div class="preview-area" id="previewArea">
                 <img id="previewImage" class="preview-image" alt="Preview">
                 <button class="button" id="detectButton" onclick="detectObjects()">
-                    🚀 Detect Objects
+                     Detect Objects
                 </button>
             </div>
             
